logs/object_cloud/build.make.077.log.stderr
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp: In function ‘void detections_cb(const ConstPtr&)’:
/home/dan/dan_ws/src/object_cloud/src/object_cloud_node.cpp:129:4: error: ‘cloudCBCallled’ was not declared in this scope
 if(cloudCBCallled){ 
    ^
make[2]: *** [CMakeFiles/object_cloud_node.dir/src/object_cloud_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/object_cloud_node.dir/all] Error 2
make: *** [all] Error 2
